# FlyCube

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  bitbucket-pipelines.yml  build.py  init.py  revision.h.in
D3D12/: .gitignore  CMakeLists.txt
D3D12/D3D12/: D3D12.vcxproj  D3D12.vcxproj.filters  DXSample.cpp  DXSample.h  IDXSample.h  Main.cpp  PixelShader.hlsl  Source.cpp  Utility.h  VertexShader.hlsl  Win32Application.cpp  Win32Application.h  d3dx12.h
D3D12/solution/: .gitignore  D3D12.sln
D3D12/solution/D3D12/: D3D12.vcxproj  D3D12.vcxproj.filters
D3D12/src/: DX12Geometry.cpp  DX12Geometry.h  DXSample.cpp  DXSample.h  FileUtility.h  Geometry.cpp  Geometry.h  Main.cpp  Util.h  Utility.h  Win32Application.cpp  Win32Application.h
D3D12/src/shaders/: PixelShader.hlsl  VertexShader.hlsl
OpenGL/: CMakeLists.txt
OpenGL/app_android/app/: build.gradle
OpenGL/app_glfw/: CMakeLists.txt  main.cpp
OpenGL/common/: CMakeLists.txt
OpenGL/common/gl_load/: CMakeLists.txt  gl_core_4_5.c
OpenGL/common/simple_camera/: CMakeLists.txt
OpenGL/common/testscene/: CMakeLists.txt
OpenGL/common/utils/: CMakeLists.txt
OpenGL/example/: CMakeLists.txt
OpenGL/example/app_android_studio/: README.md  android.toolchain.cmake
OpenGL/example/app_glfw/: CMakeLists.txt  main.cpp
OpenGL/example/app_jni_eclipse/: build_android.bat
OpenGL/example/app_jni_vs2015/: .gitignore  app_jni_vs2015.sln
OpenGL/example/app_qml/: CMakeLists.txt  main.cpp  main.qml  renderitem.cpp  renderitem.h
OpenGL/example/app_qt/: CMakeLists.txt  main.cpp  renderwidget.cpp  renderwidget.h
OpenGL/resources/model/: suzanne.fbx
OpenGL/samples/: CMakeLists.txt
OpenGL/samples/CGCoursework/: CMakeLists.txt  geometry.h  main.cpp  scene.h  shaders.h
OpenGL/samples/CGPhysical/: geometry.h  main.cpp  scene.h  shaders.h
OpenGL/samples/Demo/: CMakeLists.txt  geometry.h  main.cpp  scene.h  shaders.h
OpenGL/src/: CMakeLists.txt
OpenGL/src/demo_scene/: geometry.cpp  geometry.h  scene.cpp  scene.h  shaders.h
OpenGL/src/gl_load/: CMakeLists.txt
OpenGL/src/scene/: CMakeLists.txt  scene.cpp  scene.h
Source/Apps/OpenGL/: CMakeLists.txt  scene.cpp
Source/D3D11/: CMakeLists.txt
Source/D3D11/src/: DXSample.cpp  Main.cpp
Source/Modules/D3DUtils/: CMakeLists.txt
common/mlogger/: CMakeLists.txt
common/mlogger/include/: mlogger.h  mlogger_only.h
example/app_glfw/: CMakeLists.txt  main.cpp
example/app_jni_cmake/: CMakeLists.txt  android.apk.cmake
example/app_qml/: CMakeLists.txt  renderitem.cpp  renderitem.h
example/app_qt/: CMakeLists.txt  renderwidget.cpp  renderwidget.h
learning/CG2014/CG1dot13/: CMakeLists.txt  print_polygon.h  qml.qrc  renderitem.cpp  renderitem.h
learning_tasks/CG2014/CG3dot3/: CMakeLists.txt  geometry.h  main.cpp  scene.h  shaders.h
learning_tasks/CG2015/CGMorphism/: CMakeLists.txt  main.cpp  mtestscene.h
learning_tasks/CG2015/CGPhysical/: CMakeLists.txt  geometry.h  main.cpp  scene.h  shaders.h
learning_tasks/CG3dot11/: CMakeLists.txt  main.qml  print_polygon.h  renderitem.cpp  renderitem.h  util.h
samples/LayeredRendering/: CMakeLists.txt  geometry.h  main.cpp  scene.h  shaders.h
samples/LoadTexture/: CMakeLists.txt  main.cpp  scene.h  shaders.h
src/Apps/: CMakeLists.txt
src/Apps/BindlessTriangle/: CMakeLists.txt  main.cpp
src/Apps/BufferViewTest/: CMakeLists.txt  main.cpp
src/Apps/CoreDxrTriangle/: CMakeLists.txt  main.cpp
src/Apps/CoreTriangle/: CMakeLists.txt  main.cpp
src/Apps/CoreTriangleUIKit/: CMakeLists.txt  PixelShader.spv  VertexShader.spv  main.mm
src/Apps/D3D11/: CMakeLists.txt  ComputeLuminance.cpp  ComputeLuminance.h  DX11CreateUtils.h  DX11Geometry.h  DX11Scene.cpp  DX11Scene.h  DXSample.cpp  DXSample.h  GenerateMipmapPass.cpp  GenerateMipmapPass.h  GeometryPass.cpp  GeometryPass.h  ImGuiPass.cpp  ImGuiPass.h  LightPass.cpp  LightPass.h  SSAOPass.cpp  SSAOPass.h  Shaders.h  ShadowPass.cpp  ShadowPass.h  main.cpp
src/Apps/D3D12/: CMakeLists.txt
src/Apps/DepthStencilRead/: CMakeLists.txt  main.cpp
src/Apps/DesktopBindless/: CMakeLists.txt  main.cpp
src/Apps/DesktopDepthStencilRead/: CMakeLists.txt  main.cpp
src/Apps/DesktopDispatchIndirect/: CMakeLists.txt  main.cpp
src/Apps/DesktopDxrTriangle/: CMakeLists.txt  main.cpp
src/Apps/DesktopModelView/: CMakeLists.txt  main.cpp
src/Apps/DesktopTriangle/: CMakeLists.txt  main.cpp
src/Apps/DispatchIndirect/: CMakeLists.txt  main.cpp
src/Apps/DxrTriangle/: CMakeLists.txt  main.cpp
src/Apps/Example/: CMakeLists.txt  main.cpp
src/Apps/GLDemo/: CMakeLists.txt  GLGeometry.h  scene.cpp  scene.h  shaders.h  utilities.h
src/Apps/Indirect/: CMakeLists.txt  main.cpp
src/Apps/MeshShading/: CMakeLists.txt  main.cpp
src/Apps/MeshTriangle/: CMakeLists.txt  main.cpp
src/Apps/MetalTestApp/: CMakeLists.txt  main.cpp
src/Apps/ModelView/: CMakeLists.txt  main.cpp
src/Apps/ModelViewer/: CMakeLists.txt  main.cpp
src/Apps/OpenGL/: CMakeLists.txt  GLGeometry.h  GLScene.cpp  GLScene.h  geometry.h  main.cpp  scene.cpp  scene.h  shaders.h
src/Apps/PBR/: CMakeLists.txt  main.cpp
src/Apps/PBR2/: CMakeLists.txt  main.cpp
src/Apps/ParseShader/: CMakeLists.txt  main.cpp  main_linux.cpp
src/Apps/RayQuery/: CMakeLists.txt  main.cpp
src/Apps/RayTracingTriangle/: CMakeLists.txt  main.cpp
src/Apps/ShaderParser/: CMakeLists.txt  main.cpp  main_linux.cpp
src/Apps/SponzaApp/: CMakeLists.txt  ComputeLuminance.cpp  ComputeLuminance.h  DX11Scene.cpp  DX11Scene.h  GeometryPass.cpp  GeometryPass.h  ImGuiPass.cpp  ImGuiPass.h  ImGuiSettings.h  LightPass.cpp  LightPass.h  SSAOPass.cpp  SSAOPass.h  Settings.cpp  Settings.h  ShadowPass.cpp  ShadowPass.h  main.cpp
src/Apps/SponzaPbr/: BRDFGen.cpp  BRDFGen.h  BackgroundPass.cpp  BackgroundPass.h  CMakeLists.txt  ComputeLuminance.cpp  ComputeLuminance.h  Equirectangular2Cubemap.cpp  Equirectangular2Cubemap.h  GeometryPass.cpp  GeometryPass.h  IBLCompute.cpp  IBLCompute.h  ImGuiPass.cpp  (+23 more)
src/Core/: CMakeLists.txt
src/FlyCube/: CMakeLists.txt
src/FlyEngine/: CMakeLists.txt
(+1710 files in other folders)
